added react router

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -29,6 +29,54 @@
     <title>React App</title>
   </head>
   <body>
+    <script src="https://sdk.scdn.co/spotify-player.js"></script>
+    <script>
+
+      function getUrlVars() {
+        var vars = {};
+        var parts = window.location.href.replace(/[?&]+([^=&]+)=([^&]*)/gi, function(m,key,value) {
+              vars[key] = value;
+        });
+        return vars;
+      }
+
+      deviceId = ""; 
+      access_token = getUrlVars()['access_token']; 
+
+      window.onSpotifyWebPlaybackSDKReady = () => {
+      const token = access_token;
+      const player = new Spotify.Player({
+        name: 'Spotify Party Player',
+        getOAuthToken: cb => { cb(token); }
+      });
+
+      // Error handling
+      player.addListener('initialization_error', ({ message }) => { console.error(message); });
+      player.addListener('authentication_error', ({ message }) => { console.error(message); });
+      player.addListener('account_error', ({ message }) => { console.error(message); });
+      player.addListener('playback_error', ({ message }) => { console.error(message); });
+
+      // Playback status updates
+      player.addListener('player_state_changed', state => { console.log(state); });
+
+      // Ready
+      player.addListener('ready', ({ device_id }) => {
+        if(getUrlVars()['device_id'] === '-1'){
+          window.location.replace('http://localhost:3000/?device_id=' + device_id + '&access_token=' + access_token)
+        }
+        
+      });
+
+      // Not Ready
+      player.addListener('not_ready', ({ device_id }) => {
+        console.log('Device ID has gone offline', device_id);
+      });
+
+      // Connect to the player!
+        player.connect();
+  
+      };
+    </script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
